--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>Painting Board</title>
 </head>
 <body>
@@ -14,9 +15,11 @@
             <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1"/>
         </div>
         <div class="controls__btns">
-            <button id="jsRemove">Remove All</button>
-            <button id="jsMode">Fill</button>
-            <button id="jsSave">Save</button>
+            <i class="fas fa-eraser" id="jsRemove"></i>
+            <i class="fas fa-paint-brush" id="jsMode"></i>
+            <!--<button id="jsMode">Fill</button>-->
+            <i class="fas fa-save" id="jsSave"></i>
+            <!--<button id="jsSave"><i class="fas fa-save"></i></button>-->
         </div>
         <div class="controls__colors" id="jsColors">
             <div class="controls__color jsColor" style="background-color:white"></div>
