--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </div>
         <div class="controls__btns">
             <i class="fas fa-eraser" id="jsRemove"></i>
-            <i class="fas fa-paint-brush" id="jsMode"></i>
+            <i class="fas fa-fill-drip" id="jsMode"></i>
+            <!--<i class="fas fa-paint-brush" id="jsPaint"></i>-->
             <!--<button id="jsMode">Fill</button>-->
             <i class="fas fa-save" id="jsSave"></i>
             <!--<button id="jsSave"><i class="fas fa-save"></i></button>-->
